minor tweaks to opacity and adds missing returbn to prevent never visible edges

--- a/src/app/MainAppLayout.css
+++ b/src/app/MainAppLayout.css
@@ -102,7 +102,7 @@ body {
 #sketch-overlay-bot {
   position: absolute;
   display: grid;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto 10rem;
   grid-template-columns: 60% 40%;
   bottom: 0%;
   width: 100%;
