--- a/src/components/ui/NavStatusMsg.css
+++ b/src/components/ui/NavStatusMsg.css
@@ -14,7 +14,7 @@
 #nav-status-msg-list li {
   display: flex;
   font-size: 2.25rem;
-  color: rgba(var(--font), 0.6);
+  color: rgba(var(--font), 0.9);
   transition: transform 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
 }
 
